--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -45,8 +45,9 @@ Examples could be inhibition of growth/decline in sales, revenue, profit, cash f
 
 \begin{itemize}[leftmargin=*]
 
-    \item Video conferencing Jitsi Meet: For training annotators in voice/videochat environment. Open preferably in Chrome browser.\\
-        \texttt{url: \url{https://meet.jit.si/lt3anno}}
+    \item Chat and Audio/Video conferencing on Microsoft Teams using your UGent institutional email address for sign-in. An online chat-based collaboration environment for announcing issues in the annotation process and resolving annotation uncertainties. For training annotators in voice/videochat environment. Here annotators can discuss uncertainties and report any annotation issues.
+\\
+        \texttt{url: \url{https://teams.microsoft.com}}
     
     \item Video tutorial for annotator training. Annotators can follow along with the DEMO project on \url{https://webanno.lt3.ugent.be}:
     \begin{itemize}
@@ -64,12 +65,8 @@ Examples could be inhibition of growth/decline in sales, revenue, profit, cash f
         \texttt{url: \url{http://webanno.lt3.ugent.be/}}\\
         \texttt{username: firstnamelastname}\\
         \texttt{password: lt34nn0}
+    
         
-    \item Collaboration channel Slack:\\
-        Slack is an online chat-based collaboration environment for announcing issues in the annotation process and resolving annotation uncertainties. Annotators are to make an account before beginning annotation using their institutional email address.\\
-        \texttt{url: \url{https://lt3anno.slack.com/}}\\
-        
-        Here you can discuss uncertainties and report any annotation issues.
 \end{itemize}
 
 \subsection{Information Sources}
