--- a/tex/revisionhistory.tex
+++ b/tex/revisionhistory.tex
@@ -4,5 +4,8 @@
   \vhEntry{0.3}{05.04.2020}{{Gilles Jacobs}}{Added screenshots. Interface and workflow diagram figures.}
   \vhEntry{0.4}{08.04.2020}{{Gilles Jacobs}}{Performed annotation test on 15 different docs with colleagues (Joke Daems, Cynthia Van Hee, Margot Fonteyne Ayla Rigouts Terryn). Collect feedback and made following changes: Fix several typo's. Add ``difficult cases'' section. Conceptually unified sentiment annotations and events so that all same rules apply. Edit definitions to be more clear.}
   \vhEntry{0.5}{13.04.2020}{{Gilles Jacobs}}{Remove ``Conflict'' polarity label as it occurs very rarely: ``Conflict'' occurred 0 times across 15 documents in annotation testing and appeared only in 2\% of cases in EventDNA.}
-  \vhEntry{0.6}{15.04.2020}{{Gilles Jacobs}}{Add ``difficult cases'' section.}
+  \vhEntry{0.6}{15.04.2020}{{Gilles Jacobs}}{Add ``notes'' with special cases.}
+  \vhEntry{0.7}{21.04.2020}{{Gilles Jacobs}}{Add no more edge cases. }
+  \vhEntry{0.9}{27.04.2020}{{Gilles Jacobs}}{Fixed final typo's and lay-out. Start annotation.}
+  \vhEntry{1.0}{29.04.2020}{{Gilles Jacobs}}{Added note on Relevancy and added edga case for double events. Final version for annotation project.}
 \end{versionhistory}
